PYPE/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list component
Rule 3     statement_list -> statement_list import_statement
Rule 4     statement_list -> import_statement
Rule 5     statement_list -> component
Rule 6     import_statement -> LPAREN IMPORT ID RPAREN
Rule 7     component -> LBRACE ID expression_list RBRACE
Rule 8     expression_list -> expression_list expression
Rule 9     expression_list -> expression
Rule 10    expression -> LPAREN INPUT declaration_list RPAREN
Rule 11    expression -> LPAREN INPUT RPAREN
Rule 12    expression -> LPAREN OUTPUT declaration_list RPAREN
Rule 13    expression -> LPAREN OUTPUT RPAREN
Rule 14    declaration_list -> declaration_list declaration
Rule 15    declaration_list -> declaration
Rule 16    declaration -> LPAREN type ID RPAREN
Rule 17    declaration -> ID
Rule 18    type -> ID
Rule 19    expression -> LPAREN ASSIGN ID expression RPAREN
Rule 20    expression -> LPAREN ID parameter_list RPAREN
Rule 21    expression -> LPAREN ID RPAREN
Rule 22    expression -> LPAREN OP_ADD parameter_list RPAREN
Rule 23    expression -> LPAREN OP_SUB parameter_list RPAREN
Rule 24    expression -> LPAREN OP_MUL parameter_list RPAREN
Rule 25    expression -> LPAREN OP_DIV parameter_list RPAREN
Rule 26    expression -> ID
Rule 27    expression -> NUMBER
Rule 28    expression -> STRING
Rule 29    parameter_list -> parameter_list expression
Rule 30    parameter_list -> expression

Terminals, with rules where they appear

ASSIGN               : 19
ID                   : 6 7 16 17 18 19 20 21 26
IMPORT               : 6
INPUT                : 10 11
LBRACE               : 7
LPAREN               : 6 10 11 12 13 16 19 20 21 22 23 24 25
NUMBER               : 27
OP_ADD               : 22
OP_DIV               : 25
OP_MUL               : 24
OP_SUB               : 23
OUTPUT               : 12 13
RBRACE               : 7
RPAREN               : 6 10 11 12 13 16 19 20 21 22 23 24 25
STRING               : 28
error                : 

Nonterminals, with rules where they appear

component            : 2 5
declaration          : 14 15
declaration_list     : 10 12 14
expression           : 8 9 19 29 30
expression_list      : 7 8
import_statement     : 3 4
parameter_list       : 20 22 23 24 25 29
program              : 0
statement_list       : 1 2 3
type                 : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list component
    (3) statement_list -> . statement_list import_statement
    (4) statement_list -> . import_statement
    (5) statement_list -> . component
    (6) import_statement -> . LPAREN IMPORT ID RPAREN
    (7) component -> . LBRACE ID expression_list RBRACE

    LPAREN          shift and go to state 4
    LBRACE          shift and go to state 3

    program                        shift and go to state 1
    import_statement               shift and go to state 5
    statement_list                 shift and go to state 6
    component                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (5) statement_list -> component .

    LBRACE          reduce using rule 5 (statement_list -> component .)
    LPAREN          reduce using rule 5 (statement_list -> component .)
    $end            reduce using rule 5 (statement_list -> component .)


state 3

    (7) component -> LBRACE . ID expression_list RBRACE

    ID              shift and go to state 7


state 4

    (6) import_statement -> LPAREN . IMPORT ID RPAREN

    IMPORT          shift and go to state 8


state 5

    (4) statement_list -> import_statement .

    LBRACE          reduce using rule 4 (statement_list -> import_statement .)
    LPAREN          reduce using rule 4 (statement_list -> import_statement .)
    $end            reduce using rule 4 (statement_list -> import_statement .)


state 6

    (1) program -> statement_list .
    (2) statement_list -> statement_list . component
    (3) statement_list -> statement_list . import_statement
    (7) component -> . LBRACE ID expression_list RBRACE
    (6) import_statement -> . LPAREN IMPORT ID RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    LBRACE          shift and go to state 3
    LPAREN          shift and go to state 4

    import_statement               shift and go to state 9
    component                      shift and go to state 10

state 7

    (7) component -> LBRACE ID . expression_list RBRACE
    (8) expression_list -> . expression_list expression
    (9) expression_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression_list                shift and go to state 11
    expression                     shift and go to state 13

state 8

    (6) import_statement -> LPAREN IMPORT . ID RPAREN

    ID              shift and go to state 17


state 9

    (3) statement_list -> statement_list import_statement .

    LBRACE          reduce using rule 3 (statement_list -> statement_list import_statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement_list import_statement .)
    $end            reduce using rule 3 (statement_list -> statement_list import_statement .)


state 10

    (2) statement_list -> statement_list component .

    LBRACE          reduce using rule 2 (statement_list -> statement_list component .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list component .)
    $end            reduce using rule 2 (statement_list -> statement_list component .)


state 11

    (7) component -> LBRACE ID expression_list . RBRACE
    (8) expression_list -> expression_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RBRACE          shift and go to state 19
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 18

state 12

    (26) expression -> ID .

    RPAREN          reduce using rule 26 (expression -> ID .)
    RBRACE          reduce using rule 26 (expression -> ID .)
    LPAREN          reduce using rule 26 (expression -> ID .)
    ID              reduce using rule 26 (expression -> ID .)
    NUMBER          reduce using rule 26 (expression -> ID .)
    STRING          reduce using rule 26 (expression -> ID .)


state 13

    (9) expression_list -> expression .

    RBRACE          reduce using rule 9 (expression_list -> expression .)
    LPAREN          reduce using rule 9 (expression_list -> expression .)
    ID              reduce using rule 9 (expression_list -> expression .)
    NUMBER          reduce using rule 9 (expression_list -> expression .)
    STRING          reduce using rule 9 (expression_list -> expression .)


state 14

    (27) expression -> NUMBER .

    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    RBRACE          reduce using rule 27 (expression -> NUMBER .)
    LPAREN          reduce using rule 27 (expression -> NUMBER .)
    ID              reduce using rule 27 (expression -> NUMBER .)
    NUMBER          reduce using rule 27 (expression -> NUMBER .)
    STRING          reduce using rule 27 (expression -> NUMBER .)


state 15

    (28) expression -> STRING .

    RPAREN          reduce using rule 28 (expression -> STRING .)
    RBRACE          reduce using rule 28 (expression -> STRING .)
    LPAREN          reduce using rule 28 (expression -> STRING .)
    ID              reduce using rule 28 (expression -> STRING .)
    NUMBER          reduce using rule 28 (expression -> STRING .)
    STRING          reduce using rule 28 (expression -> STRING .)


state 16

    (10) expression -> LPAREN . INPUT declaration_list RPAREN
    (11) expression -> LPAREN . INPUT RPAREN
    (12) expression -> LPAREN . OUTPUT declaration_list RPAREN
    (13) expression -> LPAREN . OUTPUT RPAREN
    (19) expression -> LPAREN . ASSIGN ID expression RPAREN
    (20) expression -> LPAREN . ID parameter_list RPAREN
    (21) expression -> LPAREN . ID RPAREN
    (22) expression -> LPAREN . OP_ADD parameter_list RPAREN
    (23) expression -> LPAREN . OP_SUB parameter_list RPAREN
    (24) expression -> LPAREN . OP_MUL parameter_list RPAREN
    (25) expression -> LPAREN . OP_DIV parameter_list RPAREN

    INPUT           shift and go to state 20
    OUTPUT          shift and go to state 24
    ASSIGN          shift and go to state 27
    ID              shift and go to state 26
    OP_ADD          shift and go to state 25
    OP_SUB          shift and go to state 21
    OP_MUL          shift and go to state 22
    OP_DIV          shift and go to state 23


state 17

    (6) import_statement -> LPAREN IMPORT ID . RPAREN

    RPAREN          shift and go to state 28


state 18

    (8) expression_list -> expression_list expression .

    RBRACE          reduce using rule 8 (expression_list -> expression_list expression .)
    LPAREN          reduce using rule 8 (expression_list -> expression_list expression .)
    ID              reduce using rule 8 (expression_list -> expression_list expression .)
    NUMBER          reduce using rule 8 (expression_list -> expression_list expression .)
    STRING          reduce using rule 8 (expression_list -> expression_list expression .)


state 19

    (7) component -> LBRACE ID expression_list RBRACE .

    LBRACE          reduce using rule 7 (component -> LBRACE ID expression_list RBRACE .)
    LPAREN          reduce using rule 7 (component -> LBRACE ID expression_list RBRACE .)
    $end            reduce using rule 7 (component -> LBRACE ID expression_list RBRACE .)


state 20

    (10) expression -> LPAREN INPUT . declaration_list RPAREN
    (11) expression -> LPAREN INPUT . RPAREN
    (14) declaration_list -> . declaration_list declaration
    (15) declaration_list -> . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 31
    LPAREN          shift and go to state 32
    ID              shift and go to state 29

    declaration                    shift and go to state 30
    declaration_list               shift and go to state 33

state 21

    (23) expression -> LPAREN OP_SUB . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 35
    expression                     shift and go to state 34

state 22

    (24) expression -> LPAREN OP_MUL . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 36
    expression                     shift and go to state 34

state 23

    (25) expression -> LPAREN OP_DIV . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 37
    expression                     shift and go to state 34

state 24

    (12) expression -> LPAREN OUTPUT . declaration_list RPAREN
    (13) expression -> LPAREN OUTPUT . RPAREN
    (14) declaration_list -> . declaration_list declaration
    (15) declaration_list -> . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 38
    LPAREN          shift and go to state 32
    ID              shift and go to state 29

    declaration                    shift and go to state 30
    declaration_list               shift and go to state 39

state 25

    (22) expression -> LPAREN OP_ADD . parameter_list RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 40
    expression                     shift and go to state 34

state 26

    (20) expression -> LPAREN ID . parameter_list RPAREN
    (21) expression -> LPAREN ID . RPAREN
    (29) parameter_list -> . parameter_list expression
    (30) parameter_list -> . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RPAREN          shift and go to state 42
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    parameter_list                 shift and go to state 41
    expression                     shift and go to state 34

state 27

    (19) expression -> LPAREN ASSIGN . ID expression RPAREN

    ID              shift and go to state 43


state 28

    (6) import_statement -> LPAREN IMPORT ID RPAREN .

    LBRACE          reduce using rule 6 (import_statement -> LPAREN IMPORT ID RPAREN .)
    LPAREN          reduce using rule 6 (import_statement -> LPAREN IMPORT ID RPAREN .)
    $end            reduce using rule 6 (import_statement -> LPAREN IMPORT ID RPAREN .)


state 29

    (17) declaration -> ID .

    RPAREN          reduce using rule 17 (declaration -> ID .)
    LPAREN          reduce using rule 17 (declaration -> ID .)
    ID              reduce using rule 17 (declaration -> ID .)


state 30

    (15) declaration_list -> declaration .

    RPAREN          reduce using rule 15 (declaration_list -> declaration .)
    LPAREN          reduce using rule 15 (declaration_list -> declaration .)
    ID              reduce using rule 15 (declaration_list -> declaration .)


state 31

    (11) expression -> LPAREN INPUT RPAREN .

    RPAREN          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    RBRACE          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    LPAREN          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    ID              reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    NUMBER          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)
    STRING          reduce using rule 11 (expression -> LPAREN INPUT RPAREN .)


state 32

    (16) declaration -> LPAREN . type ID RPAREN
    (18) type -> . ID

    ID              shift and go to state 44

    type                           shift and go to state 45

state 33

    (10) expression -> LPAREN INPUT declaration_list . RPAREN
    (14) declaration_list -> declaration_list . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 47
    LPAREN          shift and go to state 32
    ID              shift and go to state 29

    declaration                    shift and go to state 46

state 34

    (30) parameter_list -> expression .

    RPAREN          reduce using rule 30 (parameter_list -> expression .)
    LPAREN          reduce using rule 30 (parameter_list -> expression .)
    ID              reduce using rule 30 (parameter_list -> expression .)
    NUMBER          reduce using rule 30 (parameter_list -> expression .)
    STRING          reduce using rule 30 (parameter_list -> expression .)


state 35

    (23) expression -> LPAREN OP_SUB parameter_list . RPAREN
    (29) parameter_list -> parameter_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RPAREN          shift and go to state 49
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 48

state 36

    (24) expression -> LPAREN OP_MUL parameter_list . RPAREN
    (29) parameter_list -> parameter_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RPAREN          shift and go to state 50
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 48

state 37

    (25) expression -> LPAREN OP_DIV parameter_list . RPAREN
    (29) parameter_list -> parameter_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RPAREN          shift and go to state 51
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 48

state 38

    (13) expression -> LPAREN OUTPUT RPAREN .

    RPAREN          reduce using rule 13 (expression -> LPAREN OUTPUT RPAREN .)
    RBRACE          reduce using rule 13 (expression -> LPAREN OUTPUT RPAREN .)
    LPAREN          reduce using rule 13 (expression -> LPAREN OUTPUT RPAREN .)
    ID              reduce using rule 13 (expression -> LPAREN OUTPUT RPAREN .)
    NUMBER          reduce using rule 13 (expression -> LPAREN OUTPUT RPAREN .)
    STRING          reduce using rule 13 (expression -> LPAREN OUTPUT RPAREN .)


state 39

    (12) expression -> LPAREN OUTPUT declaration_list . RPAREN
    (14) declaration_list -> declaration_list . declaration
    (16) declaration -> . LPAREN type ID RPAREN
    (17) declaration -> . ID

    RPAREN          shift and go to state 52
    LPAREN          shift and go to state 32
    ID              shift and go to state 29

    declaration                    shift and go to state 46

state 40

    (22) expression -> LPAREN OP_ADD parameter_list . RPAREN
    (29) parameter_list -> parameter_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RPAREN          shift and go to state 53
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 48

state 41

    (20) expression -> LPAREN ID parameter_list . RPAREN
    (29) parameter_list -> parameter_list . expression
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    RPAREN          shift and go to state 54
    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 48

state 42

    (21) expression -> LPAREN ID RPAREN .

    RPAREN          reduce using rule 21 (expression -> LPAREN ID RPAREN .)
    RBRACE          reduce using rule 21 (expression -> LPAREN ID RPAREN .)
    LPAREN          reduce using rule 21 (expression -> LPAREN ID RPAREN .)
    ID              reduce using rule 21 (expression -> LPAREN ID RPAREN .)
    NUMBER          reduce using rule 21 (expression -> LPAREN ID RPAREN .)
    STRING          reduce using rule 21 (expression -> LPAREN ID RPAREN .)


state 43

    (19) expression -> LPAREN ASSIGN ID . expression RPAREN
    (10) expression -> . LPAREN INPUT declaration_list RPAREN
    (11) expression -> . LPAREN INPUT RPAREN
    (12) expression -> . LPAREN OUTPUT declaration_list RPAREN
    (13) expression -> . LPAREN OUTPUT RPAREN
    (19) expression -> . LPAREN ASSIGN ID expression RPAREN
    (20) expression -> . LPAREN ID parameter_list RPAREN
    (21) expression -> . LPAREN ID RPAREN
    (22) expression -> . LPAREN OP_ADD parameter_list RPAREN
    (23) expression -> . LPAREN OP_SUB parameter_list RPAREN
    (24) expression -> . LPAREN OP_MUL parameter_list RPAREN
    (25) expression -> . LPAREN OP_DIV parameter_list RPAREN
    (26) expression -> . ID
    (27) expression -> . NUMBER
    (28) expression -> . STRING

    LPAREN          shift and go to state 16
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15

    expression                     shift and go to state 55

state 44

    (18) type -> ID .

    ID              reduce using rule 18 (type -> ID .)


state 45

    (16) declaration -> LPAREN type . ID RPAREN

    ID              shift and go to state 56


state 46

    (14) declaration_list -> declaration_list declaration .

    RPAREN          reduce using rule 14 (declaration_list -> declaration_list declaration .)
    LPAREN          reduce using rule 14 (declaration_list -> declaration_list declaration .)
    ID              reduce using rule 14 (declaration_list -> declaration_list declaration .)


state 47

    (10) expression -> LPAREN INPUT declaration_list RPAREN .
